Fix text wrap

--- a/src/app/film-detail/film-detail.page.scss
+++ b/src/app/film-detail/film-detail.page.scss
@@ -1,3 +1,7 @@
 ion-card-title {
   font-size: 25px;
 }
+
+ion-list.wrap-text ion-label {
+  white-space: normal;
+}
